# HyprDiscover

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  hyprdiscover.py  hyprdiscover.py.old  install.sh  pyproject.toml
.github/workflows/: test.yml
assets/: CONTRIBUTING.md  LICENSE  ROADMAP.md  hyprdiscover.desktop
assets/styles/: hyprdiscover.css
assets/systemd/: hyprdiscover-check.service  hyprdiscover-check.timer
core/: updates.py  waybar.py
core.old/: notifications.py  status.py  updates.py
packaging/fedora/: hyprdiscover.spec
scripts/: hyprdiscover
src/hyprdiscover/: __main__.py  config.py  logging.py
src/hyprdiscover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hyprdiscover/backends/: base.py  packagekit.py
src/hyprdiscover/models/: enums.py  package.py
src/hyprdiscover/services/: autostart.py  background.py  cli_status.py  notifications.py  reboot.py  update_manager.py  waybar.py
src/hyprdiscover/ui/: application.py  window.py
src/hyprdiscover/ui/dialogs/: about.py  confirm.py  preferences.py
src/hyprdiscover/ui/widgets/: package_list.py  progress_bar.py  status_header.py  summary_card.py  update_log.py
tests/: setup.cfg
tests/unit/: test_autostart.py  test_backends.py  test_background.py  test_cli_status.py  test_config.py  test_enums.py  test_main.py  test_models.py  test_package_list.py  test_preferences.py  test_services.py  test_unicode.py  test_waybar.py
ui/: about.py  main_window.py
ui.old/: main_window.py
